fixup! Support development streamlit versions

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -151,7 +151,8 @@ jobs:
         run: |
           cd $(mktemp -d)
           pip install --no-deps "streamlit==1.23.0"
-          whl_file=$(find . -type f)
+          set -x
+          whl_file="$(find . -type f)"
           whl_file="$(readlink -e "${whl_file}")"
           echo "whl_file=${whl_file}" >> $GITHUB_OUTPUT
 
