--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -151,8 +151,7 @@ jobs:
         run: |
           set -x
           cd "$(mktemp -d)"
-          pip install --no-deps "streamlit==1.23.0"
-          ls *.whl
+          pip download --no-deps "streamlit==1.23.0"
           whl_file="$(readlink -e "$(find . -type f)")"
           echo "whl_file=${whl_file}" >> $GITHUB_OUTPUT
 
