--- a/.github/actions/run_e2e/action.yaml
+++ b/.github/actions/run_e2e/action.yaml
@@ -31,7 +31,7 @@ runs:
         PYTHON_VERSION: ${{ inputs.python_version }}
 
     - name: Build docker images
-      run: ./dev.py e2e-build-images "--streamlit-wheel_file=${{ env.STREAMLIT_WHEEL_FILE }}" "--python-version=${{ env.PYTHON_VERSION }}"
+      run: ./dev.py e2e-build-images "--streamlit-wheel-file=${{ env.STREAMLIT_WHEEL_FILE }}" "--python-version=${{ env.PYTHON_VERSION }}"
       working-directory: ${{ github.action_path }}/../../../
       if: inputs.streamlit_wheel_file != ''
       shell: bash
