--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -18,7 +18,7 @@ jobs:
         uses: creyD/prettier_action@v4.3
         with:
           # This part is also where you can pass other options, for example:
-          prettier_options: --write **/*.{js,md,tsx}
+          prettier_options: --write **/*.{tsx,}
   black:
     runs-on: ubuntu-latest
     steps:
