--- a/bootstrap_carousel/streamlit_carousel/carousel/package.json
+++ b/bootstrap_carousel/streamlit_carousel/carousel/package.json
@@ -1,40 +1,43 @@
 {
-    "name": "streamlit_carousel",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-      "@types/jest": "^24.0.0",
-      "@types/node": "^12.0.0",
-      "@types/react": "^16.9.0",
-      "@types/react-dom": "^16.9.0",
-      "react": "^16.13.1",
-      "react-dom": "^16.13.1",
-      "react-scripts": "3.4.1",
-      "streamlit-component-lib": "^1.3.0",
-      "typescript": "^4.2.0",
-      "react-bootstrap": "^2.8.0",
-      "bootstrap": "^5.3.0"
-    },
-    "resolutions": {
-        "@types/react": "^16.9.0"
-    },
-    "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-      "extends": "react-app"
-    },
-    "browserslist": {
-      "production": [">0.2%", "not dead", "not op_mini all"],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
-    },
-    "homepage": "."
-  }
-  
+  "name": "streamlit_carousel",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.78",
+    "@types/react-dom": "^18.2.25",
+    "bootstrap": "^5.3.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "streamlit-component-lib": "^2.0.0",
+    "typescript": "^5.4.5"
+  },
+  "resolutions": {
+    "@types/react": "^16.9.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "homepage": "."
+}
