--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ package-lock.json
 # VSCode
 ########################################################################
 .vscode/
+bootstrap_carousel/test.py
