--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,7 +72,7 @@ jobs:
     - name: Upload wheel packages
       uses: actions/upload-artifact@v4
       with:
-        name: all-wheel
+        name: all-wheel-${{ matrix.node_version }}-${{ matrix.component_lib_version }}-${{ matrix.streamlit_version }}
         path: ${{ steps.component_wheels.outputs.output_directory }}/*.whl
         if-no-files-found: error
 
