--- a/examples/MaterialLogin/material_login/frontend/package.json
+++ b/examples/MaterialLogin/material_login/frontend/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.15.20",
+    "@mui/icons-material": "^5.15.20",
     "formik": "^2.1.5",
     "lodash": "^4.17.15",
     "react-dom": "^18.3.1",
