--- a/examples/CustomDataframe/custom_dataframe/frontend/package.json
+++ b/examples/CustomDataframe/custom_dataframe/frontend/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": ".",
   "devDependencies": {
+    "@types/lodash": "^4.14.150",
     "@types/node": "^22.14.1",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
