--- a/.github/actions/pack_streamlit_component_library/action.yaml
+++ b/.github/actions/pack_streamlit_component_library/action.yaml
@@ -34,8 +34,11 @@ runs:
     - name: Install node dependencies for streamlit-component-lib
       working-directory: ${{ inputs.working_directory }}/component-lib/
       shell: bash
+      # Note that the version here needs to match the version of yarn specified in the
+      # Streamlit repo: https://github.com/streamlit/streamlit/blob/develop/frontend/package.json
       run: |
-        npm install -g yarn
+        corepack enable
+        corepack prepare yarn@4.5.3 --activate
         yarn install
 
     - name: Pack streamlit-component-lib package
