[fix] Update versions of yarn and nodejs in CI (#103)
* [fix] Update versions of yarn and nodejs in CI

* Update corepack commands

--- a/.github/actions/pack_streamlit_component_library/action.yaml
+++ b/.github/actions/pack_streamlit_component_library/action.yaml
@@ -35,7 +35,8 @@ runs:
       working-directory: ${{ inputs.working_directory }}/component-lib/
       shell: bash
       run: |
-        npm install -g yarn
+        corepack enable
+        corepack install
         yarn install
 
     - name: Pack streamlit-component-lib package
