--- a/examples/CustomDataframe/custom_dataframe/frontend/package.json
+++ b/examples/CustomDataframe/custom_dataframe/frontend/package.json
@@ -2,17 +2,16 @@
   "name": "custom-dataframe-example",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "lodash": "4.17.21",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "streamlit-component-lib": "^2.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,11 +30,12 @@
   },
   "homepage": ".",
   "devDependencies": {
-    "@types/lodash": "4.14.150",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.2.0"
+    "@types/lodash": "^4.14.150",
+    "@types/node": "^22.14.1",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "typescript": "^5.8.3",
+    "vite": "^6.2.6"
   }
 }
