--- a/examples/MaterialLogin/material_login/frontend/package.json
+++ b/examples/MaterialLogin/material_login/frontend/package.json
@@ -2,23 +2,23 @@
   "name": "custom-materia-login-example",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.15.20",
+    "@mui/icons-material": "^5.15.20",
     "formik": "^2.1.5",
     "lodash": "^4.17.15",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^18.3.1",
+    "react": "^18.3.1",
     "sass": "^1.62.1",
     "streamlit-component-lib": "^2.0.0",
     "yup": "^0.29.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,11 +38,12 @@
   "homepage": ".",
   "devDependencies": {
     "@types/lodash": "^4.14.150",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/node": "^22.14.1",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
     "@types/yup": "^0.29.3",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.2.0"
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "typescript": "^5.8.3",
+    "vite": "^6.2.6"
   }
 }
