--- a/.github/actions/build_component_wheels/action.yaml
+++ b/.github/actions/build_component_wheels/action.yaml
@@ -16,6 +16,11 @@ outputs:
 runs:
   using: 'composite'
   steps:
+    - name: Install build backend for PEP 517
+      working-directory: ${{ github.action_path }}/../../../
+      shell: bash
+      run: pip install build
+
     - name: Link develop version of streamlit-component-lib
       if: inputs.custom_streamlit_component_lib_file != ''
       working-directory: ${{ github.action_path }}/../../../
@@ -23,10 +28,9 @@ runs:
       env:
         STREAMLIT_COMPONENT_LIB_FILE: ${{ inputs.custom_streamlit_component_lib_file }}
       run: |
-        find examples template template-reactless -name frontend -maxdepth 3 | while IFS= read -r line; do
+        find examples templates -maxdepth 5 -type d -name frontend -print0 | while IFS= read -r -d '' line; do
           (
-            cd "${line}";
-            npm install "${STREAMLIT_COMPONENT_LIB_FILE}"
+            cd "${line}" && npm install "${STREAMLIT_COMPONENT_LIB_FILE}"
           )
         done
 
@@ -44,8 +48,7 @@ runs:
       working-directory: ${{ github.action_path }}/../../../
       shell: bash
       run: |
-        find examples template template-reactless -maxdepth 3 -name '__init__.py' |\
-        xargs -n 1 sed -i 's/_RELEASE = False/_RELEASE = True/';
+        grep -Rl "_RELEASE = False" examples templates | xargs -r sed -i 's/_RELEASE = False/_RELEASE = True/';
         ./dev.py all-python-build-package
 
     - name: Set outputs
