[feat] Add v2 template-reactless cookiecutter support

--- a/cookiecutter/v2/{{ cookiecutter.package_name }}/pyproject.toml
+++ b/cookiecutter/v2/{{ cookiecutter.package_name }}/pyproject.toml
@@ -8,9 +8,7 @@ version = "0.0.1"
 description = "{{ cookiecutter.description }}"
 readme = "README.md"
 requires-python = ">=3.10"
-authors = [
-  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
-]
+authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
 # TODO: Restore this
 # dependencies = ["streamlit >= 1.51"]
 
