--- a/templates/v2/template-reactless/pyproject.toml
+++ b/templates/v2/template-reactless/pyproject.toml
@@ -9,8 +9,7 @@ description = "Streamlit component that allows you to do X"
 readme = "README.md"
 requires-python = ">=3.10"
 authors = [{ name = "John Smith", email = "john@example.com" }]
-# TODO: Restore this
-# dependencies = ["streamlit >= 1.51"]
+dependencies = ["streamlit >= 1.51"]
 
 [project.optional-dependencies]
 devel = [
@@ -33,7 +32,3 @@ include-package-data = true
 
 [tool.setuptools.package-data]
 my_component = ["frontend/build/**/*", "pyproject.toml"]
-
-[[tool.streamlit.component.components]]
-name = "my_component"
-asset_dir = "my_component/frontend/build"
