--- a/templates/v2/template-reactless/my_component/pyproject.toml
+++ b/templates/v2/template-reactless/my_component/pyproject.toml
@@ -1,3 +1,4 @@
+# Ship a minimal metadata file that can be picked up by Streamlit at runtime.
 [project]
 name = "streamlit-custom-component"
 version = "0.0.1"
