--- a/cookiecutter/v2/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/pyproject.toml
+++ b/cookiecutter/v2/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/pyproject.toml
@@ -1,3 +1,4 @@
+# Ship a minimal metadata file that can be picked up by Streamlit at runtime.
 [project]
 name = "{{ cookiecutter.package_name }}"
 version = "0.0.1"
