--- a/cookiecutter/v2/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-reactless/package.json
+++ b/cookiecutter/v2/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-reactless/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run clean && npm run typecheck && npm run build:frontend:production",
     "build:frontend:production": "NODE_ENV=production vite build",
-    "clean": "rm -rf build",
+    "clean": "rimraf build",
     "dev": "NODE_ENV=development vite build --watch",
     "format": "prettier --write src/**/*.ts vite.config.ts",
     "typecheck": "tsc --noEmit"
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "prettier": "^3.6.2",
+    "rimraf": "^6.1.0",
     "typescript": "^5.8.3",
     "vite": "^7.1.12"
   }
