--- a/cookiecutter/v2/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-react/package.json
+++ b/cookiecutter/v2/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-react/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "build": "npm run clean && npm run typecheck && npm run build:frontend:production",
-    "build:frontend:production": "NODE_ENV=production vite build",
+    "build:frontend:production": "cross-env NODE_ENV=production vite build",
     "clean": "rimraf build",
-    "dev": "NODE_ENV=development vite build --watch",
+    "dev": "cross-env NODE_ENV=development vite build --watch",
     "format": "prettier --write src/**/*.{ts,tsx} vite.config.ts",
     "typecheck": "tsc --noEmit"
   },
@@ -28,6 +28,7 @@
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "@vitejs/plugin-react": "^5.1.0",
+    "cross-env": "^10.1.0",
     "prettier": "^3.6.2",
     "rimraf": "^6.1.0",
     "typescript": "^5.8.3",
