--- a/cookiecutter/v2/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-reactless/package.json
+++ b/cookiecutter/v2/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-reactless/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "build": "npm run clean && npm run typecheck && npm run build:frontend:production",
-    "build:frontend:production": "NODE_ENV=production vite build",
+    "build:frontend:production": "cross-env NODE_ENV=production vite build",
     "clean": "rimraf build",
-    "dev": "NODE_ENV=development vite build --watch",
+    "dev": "cross-env NODE_ENV=development vite build --watch",
     "format": "prettier --write src/**/*.ts vite.config.ts",
     "typecheck": "tsc --noEmit"
   },
@@ -22,6 +22,7 @@
     "@streamlit/component-v2-lib": "^0.1.0"
   },
   "devDependencies": {
+    "cross-env": "^10.1.0",
     "prettier": "^3.6.2",
     "rimraf": "^6.1.0",
     "typescript": "^5.8.3",
