--- a/cookiecutter/v1/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-reactless/package.json
+++ b/cookiecutter/v1/{{ cookiecutter.package_name }}/{{ cookiecutter.import_name }}/frontend-reactless/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
+    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vite": "^6.4.1"
   },
