--- a/examples/v1/CustomDataframe/custom_dataframe/frontend/package.json
+++ b/examples/v1/CustomDataframe/custom_dataframe/frontend/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.6",
     "@vitejs/plugin-react-swc": "^3.9.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vite": "^6.4.1"
   }
