--- a/examples/v1/MaterialLogin/material_login/frontend/package.json
+++ b/examples/v1/MaterialLogin/material_login/frontend/package.json
@@ -43,6 +43,7 @@
     "@types/react-dom": "^18.3.6",
     "@types/yup": "^0.29.3",
     "@vitejs/plugin-react-swc": "^3.9.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vite": "^6.4.1"
   }
