--- a/templates/v1/template-reactless/my_component/frontend/package.json
+++ b/templates/v1/template-reactless/my_component/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
+    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vite": "^6.4.1"
   },
